--- a/src/gui/ventanaPrincipal/frmPrincipal.form
+++ b/src/gui/ventanaPrincipal/frmPrincipal.form
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="3a72e" binding="jpaBotones" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="3a72e" binding="jpaBotones" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -30,6 +30,20 @@
               <text value="Persona"/>
             </properties>
           </component>
+          <component id="42f5b" class="javax.swing.JButton" binding="btnMaquila">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <icon value="recursos/imagenes/icono-maquila.png"/>
+              <text value="Maquila"/>
+            </properties>
+          </component>
+          <vspacer id="ed27a">
+            <constraints>
+              <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
           <component id="30b66" class="javax.swing.JButton" binding="btnProduccion">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -39,13 +53,31 @@
               <text value="Produccion"/>
             </properties>
           </component>
+          <component id="bc0f" class="javax.swing.JButton" binding="btnFactura">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <icon value="recursos/imagenes/icono-factura.png"/>
+              <text value="Factura"/>
+            </properties>
+          </component>
           <component id="5f3e0" class="javax.swing.JButton" binding="btnCliente">
             <constraints>
-              <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <icon value="recursos/imagenes/icono-cliente.png"/>
               <text value="Cliente"/>
+            </properties>
+          </component>
+          <component id="6c159" class="javax.swing.JButton" binding="btnProveedor">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <icon value="recursos/imagenes/icono-proveedor.png"/>
+              <text value="Proveedor"/>
             </properties>
           </component>
           <component id="2ba91" class="javax.swing.JButton" binding="btnEmpleado">
@@ -57,56 +89,24 @@
               <text value="Empleado"/>
             </properties>
           </component>
-          <component id="6c159" class="javax.swing.JButton" binding="btnProveedor">
+          <component id="54f5a" class="javax.swing.JButton" binding="btnPuesto">
             <constraints>
-              <grid row="3" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <icon value="recursos/imagenes/icono-proveedor.png"/>
-              <text value="Proveedor"/>
-            </properties>
-          </component>
-          <component id="42f5b" class="javax.swing.JButton" binding="btnMaquila">
-            <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <icon value="recursos/imagenes/icono-maquila.png"/>
-              <text value="Maquila"/>
-            </properties>
-          </component>
-          <component id="bc0f" class="javax.swing.JButton" binding="btnFactura">
-            <constraints>
-              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <icon value="recursos/imagenes/icono-factura.png"/>
-              <text value="Factura"/>
-            </properties>
-          </component>
-          <component id="54f5a" class="javax.swing.JButton" binding="btnArea">
-            <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <icon value="recursos/imagenes/icono-area.png"/>
-              <text value="  Area"/>
+              <text value="Puesto"/>
             </properties>
           </component>
-          <component id="85ad7" class="javax.swing.JButton" binding="btnSalir">
+          <component id="b7e38" class="javax.swing.JButton" binding="btnSalir">
             <constraints>
-              <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <icon value="recursos/imagenes/salir-40.png"/>
               <text value="Salir"/>
             </properties>
           </component>
-          <vspacer id="ed27a">
-            <constraints>
-              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
         </children>
       </grid>
     </children>
