--- a/src/gui/ventanaPrincipal/frmPrincipal.form
+++ b/src/gui/ventanaPrincipal/frmPrincipal.form
@@ -26,6 +26,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-persona.png"/>
               <text value="Persona"/>
             </properties>
           </component>
@@ -34,6 +35,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-maquila.png"/>
               <text value="Maquila"/>
             </properties>
           </component>
@@ -47,6 +49,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-produccion.png"/>
               <text value="Produccion"/>
             </properties>
           </component>
@@ -55,6 +58,7 @@
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-factura.png"/>
               <text value="Factura"/>
             </properties>
           </component>
@@ -63,6 +67,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-cliente.png"/>
               <text value="Cliente"/>
             </properties>
           </component>
@@ -71,6 +76,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-proveedor.png"/>
               <text value="Proveedor"/>
             </properties>
           </component>
@@ -79,6 +85,7 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-empleado.png"/>
               <text value="Empleado"/>
             </properties>
           </component>
@@ -87,6 +94,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/icono-area.png"/>
               <text value="Puesto"/>
             </properties>
           </component>
@@ -95,6 +103,7 @@
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <icon value="recursos/imagenes/salir-40.png"/>
               <text value="Salir"/>
             </properties>
           </component>
